src/objects/Exchange_Information__c.object
<CustomObject>
    <description>This object is for the Project Central - Application Registry application and supports the &quot;Application&quot; object. This object tracks the information type exchanged between two systems.</description>
    <fields>
        <fullName>Application_Interface__c</fullName>
        <label>Application Interface</label>
        <referenceTo>Application_Interface__c</referenceTo>
        <relationshipLabel>Exchange Information</relationshipLabel>
        <relationshipName>Exchange_Information</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Information__c</fullName>
        <label>Information</label>
        <referenceTo>Information__c</referenceTo>
        <relationshipLabel>Exchange Information</relationshipLabel>
        <relationshipName>Exchange_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Periodicity__c</fullName>
        <label>Periodicity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Exchange Information</label>
    <nameField>
        <displayFormat>EI-{0000000}</displayFormat>
        <label>Exchange Information ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exchange Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>